WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271407
Regression(
276418@main
) PLT is regressed on iPhone
https://bugs.webkit.org/show_bug.cgi?id=271407
Summary
Regression(276418@main) PLT is regressed on iPhone
Chris Dumez
Reported
2024-03-21 13:22:15 PDT
PLT is regressed on iPhone since
276418@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-03-21 13:29:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26263
EWS
Comment 2
2024-03-21 14:02:40 PDT
Committed
276493@main
(b3193928d893): <
https://commits.webkit.org/276493@main
> Reviewed commits have been landed. Closing PR #26263 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-03-21 14:03:15 PDT
<
rdar://problem/125191080
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug