Regression(276418@main) PLT is regressed on iPhone https://bugs.webkit.org/show_bug.cgi?id=271407

Reviewed by Ben Nham.

Make 276418@main specific to Mac for now since this is where it matters
the most and since this is a PLT regression on iPhone only. Ideally,
iPad would get this behavior too (since there is no PLT regression there)
but we have no way to distinguish iPad and iPhone at build time.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didReceiveTitleForFrame):
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::canBeAddedToWebProcessCache const):

Canonical link: https://commits.webkit.org/276493@main